<resources>
    <string name="app_name">Kotlearn</string>
    <string name="bottom_navigation_reddit">Reddit</string>
    <string name="bottom_navigation_twitter">Twitter</string>
    <string name="bottom_navigation_quiz">Quiz</string>
    <string name="bottom_navigation_about">About</string>
    <string name="day_night_switch">Enable Night Mode\u00A0\u00A0</string>

    <!--Reddit-->
    <string name="reddit_parent_body">Read Kotlin related posts on Reddit!</string>
    <string name="reddit_parent_sortby">Sort by :</string>

    <!--Twitter-->
    <string name="twitter_parent_body">Read Kotlin news on Twitter!</string>

    <!--About-->
    <string name="about_hello">Welcome To Kotlearn!</string>
    <string name="about_twitter">Read @kotlin and #kotlin on Twitter!</string>
    <string name="about_reddit">Read r/Kotlin and r/Android on Reddit!</string>
    <string name="about_quiz">Test your knowledge with our built-in quiz!</string>
    <string name="about_last">Ready? Let\'s get started!</string>

    <!--Common placeholders-->
    <string name="loading_feed">Loading feed...</string>
    <string name="loaded_feed">Loading finished!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--QUIZ LANDING PAGE-->
    <string name="introduction"> INTRODUCTION </string>
    <string name="basics"> BASICS </string>
    <string name="classesAndObjects"> CLASSES AND OBJECTS </string>

    <!--QUIZ PAGES-->
    <string name="test"> Take the test </string>
    <string name="tvIntroduction"> Introduction </string>
    <string name="tvBasics"> Basics </string>
    <string name="tvClassesAndObjects"> Classes and Objects </string>
    <string name="butNext"> Next </string>
    <string name="introSummary"> In this section, you will be tested on simple concepts in Kotlin such as coding conventions and basic syntax to get you started with Kotlin! </string>
    <string name="basicsSummary"> This section will focus on more intermediate Kotlin concepts such as basic types, packages and imports, control flows, null safety operators and returns and jumps. </string>
    <string name="classesAndObjectsSummary"> This section will test more advanced concepts related to classes and objects. Some of the concepts that will be addressed are classes, extention functions and visibility modifiers. </string>
    <string name="title"> Section Summary </string>
</resources>
