<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Quiz.QuizIntroductionFragment">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:layout_marginStart="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_introduction"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:src="@drawable/introduction" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="4"
                android:text="@string/introduction"
                android:fontFamily="sans-serif-light"
                android:textSize="30sp" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/hello_blank_fragment" />
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/butTestYourself"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="1"
        android:layout_gravity="bottom|center"
        android:background="@drawable/button_background"
        android:layout_marginBottom="20dp"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textAllCaps="false"
        android:fontFamily="sans-serif-light"
        android:padding="@dimen/text_margin"
        android:text="@string/test" />
</FrameLayout>