<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.Quiz.QuizClassesAndObjectsFragment">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:elevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_marginStart="20dp"
            android:orientation="horizontal">

            <!--THE BACK BUTTON-->
            <ImageButton
                android:id="@+id/classesAndObjectsBackButton"
                android:layout_width="50sp"
                android:layout_height="33sp"
                android:layout_gravity="center"
                android:scaleType="centerInside"
                android:background="#00000000"
                android:src="@drawable/back" />

            <!--THE EGG-->
            <ImageView
                android:id="@+id/image_classesAndObjects"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:maxHeight="80dp"
                android:adjustViewBounds="true"
                android:src="@drawable/classesandobjects" />

            <!-- INTRODUCTION -->
            <TextView
                android:id="@+id/textViewClassesAndObjects"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="4"
                android:text="@string/classesAndObjects"
                android:fontFamily="sans-serif-light"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_margin="50sp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30sp"
            android:layout_gravity="center"
            android:gravity="top|center"
            android:text="@string/title"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="50sp"
            android:layout_gravity="center_vertical"
            android:gravity="center"

            android:text="@string/classesAndObjectsSummary"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:gravity="center|bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/butClassesAndObjectsTestYourself"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:background="@drawable/button_background"
            android:layout_marginBottom="20dp"
            android:textColor="#000000"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textAllCaps="false"
            android:fontFamily="sans-serif-light"
            android:padding="2dp"
            android:text="@string/test"
            android:elevation="2dp"/>

    </LinearLayout>

</LinearLayout>